--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@
     display:flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 20%;
+    margin-top: 10%;
     background-color: rgb(227, 183, 183);
     height: 400px;
     width: 500px;
-    margin-left: 40%;
+    margin-left: 35%;
    
     
 }
@@ -39,8 +39,11 @@ input{
 
 .bottom div{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     margin-top: 10px;
-    background-color: rgb(154, 151, 157);
+    background-color: white;
     width: 70%;
+}
+.delete{
+  background-color:red
 }
